[package]
name = "smol_base"
version = "0.1.0"
edition = "2021"

[dependencies]
# async
event-listener = "5.3.1"
async-executor = { git = "https://github.com/brandonros/async-executor.git", rev = "144d6c6bcd92ecba5ae1214df25f420d192d5248", features = ["main_executor"] }
async-io = "2.3.4"
# errors
simple_error = { git = "https://github.com/brandonros/simple_error.git" }

[dev-dependencies]
env_logger = "0.11.5"
log = "0.4.22"
